; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_replay_logevent_index_mode.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_replay_logevent_index_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_generic = type { i32 }

@log_last_ts = common dso_local global i64 0, align 8
@index_timestamp = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cache_replay_logevent_index_mode(%struct.lev_generic* %0, i32 %1) #0 {
  %3 = alloca %struct.lev_generic*, align 8
  %4 = alloca i32, align 4
  store %struct.lev_generic* %0, %struct.lev_generic** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @log_last_ts, align 8
  %6 = load i64, i64* @index_timestamp, align 8
  %7 = icmp sge i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = call i32 (...) @cache_save_pseudo_index()
  %10 = call i32 @exit(i32 0) #3
  unreachable

11:                                               ; preds = %2
  %12 = load %struct.lev_generic*, %struct.lev_generic** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @cache_replay_logevent(%struct.lev_generic* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @cache_save_pseudo_index(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @cache_replay_logevent(%struct.lev_generic*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
